== Changelog ==

= 8.3.8 =
* Fixed SEO redirection algorithm
* Improved memory cleaning
* Removed obsolete PHP codes

= 8.3.7 =
* Improved hiding of the navigation menu by geolocation
* Fixed PHP warnings
* Fixed REST API subversion bugs

= 8.3.6 =
* Improved WP Rocket and SiteGround Cache
* Improved REST API code
* Removed unnecessary code
* Fixed localhost problems

= 8.3.5 =
* Fixed WooCommerce widget
* Fixed SEO redirection table

= 8.3.4 =
* **IMPORTANT UPDATE**
* Fixed memory leaking on custom post types

= 8.3.3 =
* Fixed license deactivation
* Removed deprecated code
* Adding support for future PHP version

= 8.3.2 =
* Fixed menu geolocations
* Fixed notifications
* Fixed Contact Form 7 inputs
* Fixed Yoast SEO tags

= 8.3.1 =
* Improved Contact Form 7 integration
* Improved PHP code

= 8.3.0 =
* Switched to new API keys
* Added new utilities, endpoints, actions & filters
* Added redirection modes
* Removed unnecessary functionality
* Optimized PHP code

= 8.2.10 =
* Fixed loading widgets
* Added support for the Kinsta
* Code optimization

= 8.2.9 =
* Fixed browser detection
* Improved operating system detection

= 8.2.8 =
* Improved dashboard
* Improved file includes
* Improved plugin update
* Removed deprecated and bad codes

= 8.2.7 =
* **PLUGIN UPDATE: Mandatory PHP extensions cURL and Multibyte String**
* **WOOCOMMERCE UPDATE: Revisit WooCommerce settings after update**
* Added requirements for the PHP extensions cURL and Multibyte String
* Added WooCommerce geo location info log to orders
* Added WooCommerce sidebar widget for the geo location info log
* Fixed WooCommerce geolocate for orders
* Updated Library

= 8.2.6 =
* Adding browser and operating system recognition
* Adding short codes for the desktop, mobile, browser and platform
* Fixing UI and UX in the admin
* Fixing plugin security
* Improved debbuging

= 8.2.5 =
* **GREAT UPDATE - BACKUP IS REQUIRED**
* Added new internal database cache
* Fixed cache bugs