@@ -3,6 +3,7 @@
 = 8.3.8 =
 * Fixed SEO redirection algorithm
 * Improved memory cleaning
+* Improved site protection algorithm
 * Removed obsolete PHP codes
 
 = 8.3.7 =
